--- a/SS04_BaiTap3-1_1.html
+++ b/SS04_BaiTap3-1_1.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SS05_BaiTap3-1_2</title>
-    <link rel="stylesheet" href="../BaiTap/SS05_BT3-1_2main.css">
+    <title>SS04_BaiTap3-1_1</title>
+    <link rel="stylesheet" href="../BaiTap/SS04_BT3-1_1main.css">
 </head>
 
 <body>
-    <div>Change Color</div>
+    <div>Fade in</div>
 </body>
 
 </html>
