--- a/SS04_BaiTap3-1_5.html
+++ b/SS04_BaiTap3-1_5.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SS05_BaiTap3-1_4</title>
-    <link rel="stylesheet" href="../BaiTap/SS05_BT3-1_4main.css">
+    <title>SS04_BaiTap3-1_5</title>
+    <link rel="stylesheet" href="../BaiTap/SS04_BT3-1_5main.css">
 </head>
 
 <body>
-    <div>Shrink</div>
+    <div>Rotate</div>
 </body>
 
 </html>
